dashboard css bug fixes

--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -63,6 +63,10 @@ p {
     cursor: pointer;
 }
 
+.card-c {
+    width: 100% !important;
+}
+
 .request-buttons > button {
     width: 96% !important;
 }
