🚑 Schedule Back Running

--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
                     <div *ngFor="let usr of requests" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl mt-3">
                         <div class="md:flex">
                             <div class="md:shrink-0">
-                                <img class="h-48 w-full object-cover md:h-full md:w-48" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/5.jpg?raw=true">
+                                <img class="h-48 w-full object-cover md:h-full md:w-48" src="getImage(usr)">
                             </div>
                             <div class="mx-4 mb-3 mt-2">
                                 <div class="acceptTitle">
