--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -1,5 +1,4 @@
 <training-buddy-back-navbar title="Event"></training-buddy-back-navbar>
-<p>workout works!</p>
 <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 <div *ngIf="!loading"> 
     <div class="px-4">
@@ -23,13 +22,9 @@
             participants: 
             <mat-chip-list>
                 <mat-chip *ngFor="let participant of workout?.participants">
-                  <img matChipAvatar src="{{participant.image}}" alt="picture"/>
-                {{participant.name}}
+                  <img matChipAvatar src="{{ getImage(participant.id) }}" alt="picture"/>
+                {{participant.userName}} {{participant.userSurname}}
                 </mat-chip>
-                <mat-chip *ngFor="let participant of workout?.participants">
-                    <img matChipAvatar src="{{participant.image}}" alt="picture"/>
-                  {{participant.name}}
-                  </mat-chip>
               </mat-chip-list>
           </div>
          
