--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
@@ -80,3 +80,9 @@ h2 {
 .cursor:hover {
     cursor: pointer;
 }
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 70%;
+}
