--- a/libs/client/schedule/feature/src/lib/workout/workout.component.scss
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.scss
@@ -5,6 +5,13 @@
     transform: translate(-50%, -50%);
 }
 
+#addbutton {
+    background-color: #1b1a1b !important;
+    position: fixed;
+    top: 80%;
+    left: 80%;
+}
+
 .spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
     stroke: #1b1a1b;
 }
