--- a/libs/client/schedule/feature/src/lib/workout-invite/workout-invite.component.html
+++ b/libs/client/schedule/feature/src/lib/workout-invite/workout-invite.component.html
@@ -20,7 +20,7 @@
 </div>
 <mat-list>
     <mat-list-item *ngFor="let buddy of buddies">
-        <h4 mat-line class="truncate">{{ buddy?.userName }} {{ buddy?.userSurname }}</h4>
+        <h4 mat-line >{{ buddy?.userName }} {{ buddy?.userSurname }}</h4>
         <button class="text-center mx-5 button" (click)="sendRequest(buddy?.email)">
             <mat-icon>add_circle</mat-icon>
         </button>
