--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -15,11 +15,11 @@
             <mat-divider></mat-divider>
             <mat-list-item>Duration: {{workout?.proposedDuration}}</mat-list-item>
             <mat-divider></mat-divider>
-            <mat-list-item>organiser: {{workout?.organiser}}</mat-list-item>
+            <mat-list-item>Organiser: {{workout?.organiser}}</mat-list-item>
             <mat-divider></mat-divider>
+            <mat-list-item>participants: </mat-list-item>
           </mat-list>
           <div>
-            participants: 
             <mat-chip-list>
                 <mat-chip *ngFor="let participant of workout?.participants">
                   <img matChipAvatar src="https://firebasestorage.googleapis.com/v0/b/training-buddy-2022.appspot.com/o/UserProfileImage%2F0a5fc8b0-0e52-11ed-bdc7-f3e9a95969bd?alt=media&token=ebe36b07-6760-4f30-be92-ca5c0335ba74" alt="picture"/>
