--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -21,8 +21,8 @@
           </mat-list>
           <div>
             <mat-chip-list>
-                <mat-chip *ngFor="let participant of workout?.participants">
-                  <img matChipAvatar src="https://firebasestorage.googleapis.com/v0/b/training-buddy-2022.appspot.com/o/UserProfileImage%2F0a5fc8b0-0e52-11ed-bdc7-f3e9a95969bd?alt=media&token=ebe36b07-6760-4f30-be92-ca5c0335ba74" alt="picture"/>
+                <mat-chip *ngFor="let participant of participants">
+                  <img matChipAvatar src="{{participant.image}}" alt="picture"/>
                 {{participant.userName}} {{participant.userSurname}}
                 </mat-chip>
               </mat-chip-list>
