--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -1,7 +1,7 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
 
 <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
-<div *ngIf="!loading"> 
+<div *ngIf="!loading" class="px-4"> 
     <div *ngIf="!upcomingEvents && !invitesAvailable" class="my-6">
         <mat-hint class="text-center">No workouts scheduled</mat-hint>
     </div>
