view profile css

--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -4,7 +4,7 @@
 
     <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 
-    <mat-grid-list *ngIf="!loading" [@fadeIn] cols="1" rows="1" rowHeight="2:1">
+    <mat-grid-list class="cont" *ngIf="!loading" [@fadeIn] cols="1" rows="1" rowHeight="2:1">
     
         <!-- <mat-grid-tile> -->
             <!-- <mat-card> -->
