--- a/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.html
@@ -4,8 +4,8 @@
 
     <mat-toolbar-row>
 
-      <span>Training-Buddy</span>
-
+      <!-- <span>Training-Buddy</span> -->
+      <training-buddy-logo id="logo"></training-buddy-logo>
       <span class="example-spacer"></span>
 
     </mat-toolbar-row>
