--- a/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.scss
+++ b/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.scss
@@ -11,5 +11,10 @@ mat-toolbar {
 }
 
 span {
-    color : white;
+    color: white;
+}
+
+#logo > div > svg {
+    height: 240px;
+    width: 70px;
 }
