💄Add error messages
#341

--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -18,7 +18,9 @@
           <form [formGroup]="loginFrm">
 
             <h1 class="text-center">Log In</h1>
-
+            <mat-error *ngIf="loginFailed">
+              <p class="text-center">Login failed. Incorrect credentials provided.</p>
+            </mat-error>
             <!-- email -->
             <mat-form-field appearance="outline">
               <mat-label>Email</mat-label>
