💄fix the the schedule card

--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
@@ -106,3 +106,9 @@ h2 {
 .fullwidth {
     width: 100%;
 }
+.with-icon {
+  display: flex;
+  align-items: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
